roles/common/files/iptables_backend.conf
# Generated by iptables-save v1.6.0 on Sat Dec 21 01:53:35 2019
*filter
:INPUT DROP [570:29988]
:FORWARD DROP [0:0]
:OUTPUT ACCEPT [21442:2293240]
-A INPUT -i lo -j ACCEPT
-A INPUT -s 172.30.0.0/24 -j ACCEPT
-A INPUT -s 172.31.32.0/20 -j ACCEPT
-A INPUT -s 162.245.23.186/32 -p tcp -m tcp --dport 22 -m conntrack --ctstate NEW,ESTABLISHED -j ACCEPT
-A INPUT -s 13.56.75.111/32 -p tcp -m tcp --dport 22 -m conntrack --ctstate NEW,ESTABLISHED -j ACCEPT
-A INPUT -p udp -m udp --sport 53 -j ACCEPT
-A INPUT -p udp -m udp --sport 123 -j ACCEPT
-A OUTPUT -o lo -j ACCEPT
-A OUTPUT -p udp -m udp --dport 53 -j ACCEPT
-A OUTPUT -p udp -m udp --dport 123 -j ACCEPT
COMMIT
# Completed on Sat Dec 21 01:53:35 2019
