roles/common/files/iptables_frontend.conf
#iptables-save v1.6.0 on Sat Dec 21 01:55:05 2019 : LB Frontend
*filter
:INPUT DROP [348:16636]
:FORWARD DROP [0:0]
:OUTPUT ACCEPT [9265:777672]
-A INPUT -i lo -j ACCEPT
-A INPUT -s 172.30.0.0/24 -j ACCEPT
-A INPUT -s 172.31.32.0/20 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 60000:65000 -m conntrack --ctstate NEW,ESTABLISHED -j ACCEPT
-A INPUT -s 162.245.23.186/32 -p tcp -m tcp --dport 22 -m conntrack --ctstate NEW,ESTABLISHED -j ACCEPT
-A INPUT -s 13.56.75.111/32 -p tcp -m tcp --dport 22 -m conntrack --ctstate NEW,ESTABLISHED -j ACCEPT
-A INPUT -p tcp -m tcp --dport 22 -m conntrack --ctstate NEW,ESTABLISHED -j ACCEPT
-A INPUT -p tcp -m tcp --sport 22 -m conntrack --ctstate ESTABLISHED -j ACCEPT
-A INPUT -p udp -m udp --sport 53 -j ACCEPT
-A INPUT -p udp -m udp --sport 123 -j ACCEPT
-A OUTPUT -o lo -j ACCEPT
-A OUTPUT -p tcp -m tcp --sport 60000:65000 -m conntrack --ctstate ESTABLISHED -j ACCEPT
-A OUTPUT -p tcp -m tcp --sport 22 -m conntrack --ctstate ESTABLISHED -j ACCEPT
-A OUTPUT -p tcp -m tcp --dport 22 -m conntrack --ctstate NEW,ESTABLISHED -j ACCEPT
-A OUTPUT -p udp -m udp --dport 53 -j ACCEPT
-A OUTPUT -p udp -m udp --dport 123 -j ACCEPT
COMMIT
# Completed on Sat Dec 21 01:55:05 2019
